# django-pika-pubsub

./: .gitignore  LICENSE  README.rst  apps.py  pubsub.py  setup.cfg  setup.py
django_pika_pubsub/: consumer.py  producer.py  pubsub.py
django_pika_pubsub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
