[metadata]
name = django-pika-pubsub
version = 0.2
description = A Django app to publish and consume rmq-messages via Pika.
long_description = file: README.rst
url = https://grafia.ink/
author = Bogdanov Dmitry
author_email = bogdanov@phie.ru
license-file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
